fix admin update

--- a/package.json
+++ b/package.json
@@ -36,12 +36,7 @@
     "root": true,
     "env": {
       "node": true
-    },
-    "rules":{
-      "no-debugger":0,
-      "no-console": "off"
-    },
-    
+    }, 
     "extends": [
       "plugin:vue/essential",
       "eslint:recommended",
@@ -50,7 +45,10 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {
+      "no-debugger":"off",
+      "no-console": "off"
+    }
   },
   "browserslist": [
     "> 1%",
