--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.1.0",
     "commitizen": "^4.2.4",
+    "echarts": "^5.2.1",
     "cz-conventional-changelog": "^3.3.0",
     "cz-customizable": "^6.3.0",
     "eslint": "^6.7.2",
